my about page stopped wrapping.  most everything else works ok.

--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 	height:540px;
 	width:1060px;
 	margin-top:15px;
-	margin-left: 98px;
+	margin-left: 81px;
 	margin-right: 15px;
 	border: 1px solid black;
 	
 }
 .portfolio{
 	font-family: "Georgia",Times, Times New Roman, serif;
-	font-size:24px;
+	font-size:16px;
 	background-color:white;
 	width:650px;
 	height:514px;
@@ -21,8 +21,33 @@ body {
 	margin-right: 40px;
 	margin-left:10px;
 	border-right-width: 10px;
+	color:black;
 	color:#4aaaa5;
 }	
+/*.aboutme{
+	font-family: "Georgia",Times, Times New Roman, serif;
+	font-size:8px;
+	background-color:blue;
+	width:640px;
+	height:332px;
+	margin-top:20px;
+	margin-right: 40px;
+	margin-left:10px;
+	border-right-width: 10px;
+	color:red;-->*/
+
+p {
+	
+	font-size: 12px;
+	color:red;
+	display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    float: left;
+}
+
 footer {
 	width:1200px;
 	text-align: center;
@@ -37,14 +62,14 @@ footer {
 
 .contact{
 	background-color: white;
-	width:270px;
+	width:282px;
 	height:150px;
 	margin-top:20px;
 	margin-left:20px;
 	font-family: "Georgia",Times, Times New Roman, serif;
 	font-size:24px;
 	text-align:center;
-	
+	padding-right: 47px;
 	color:#4aaaa5;
 
 	
@@ -66,3 +91,35 @@ h2 {
 	border: 5px solid white;
 	
 }
+.header{
+	background-color:peru;
+}
+.selfie{
+	height:500px;
+	width:500px;
+	
+}
+.para {
+	float:left;
+	background-color:orange;
+	color:green;
+}
+
+/*.testportfoliorow{
+	background-color: red;
+	float:left;*/
+}
+
+}
+/*.testportfoliocol11{
+	color: blue;
+	float:left;*/
+}
+
+
+
+
+
+
+
+
